<resources>
    <string name="app_name">Office Mate</string>
    <string name="enter_name">Enter name</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_your_organization_name">Enter your organization name</string>
    <string name="enter_admin_email">Enter admin\'s email</string>
    <string name="enter_your_designation">Enter your designation</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_am">I am :</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
    <string name="news_feed">News feed</string>
    <string name="workstation">Workstation</string>
    <string name="members">Members</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <array name="image_pick_options">
        <item>Camera</item>
        <item>Gallery</item>
    </array>

    <string name="view_all">VIEW ALL</string>
    <string name="search">Search</string>
    <string name="enter_project_description">Enter project description…</string>
    <string name="completed">Completed:</string>
    <string name="eta">ETA:</string>
    <string name="update">UPDATE</string>

    <string name="profile_settings">Profile Settings</string>
    <string name="designation">Designation</string>
    <string name="name">Name</string>
    <string name="enter_password">Enter password</string>
    <string name="there_is_no_news_feed_yet">There is no news feed yet…</string>
    <string name="there_is_no_project_yet">There is no project yet…</string>
    <string name="threre_are_no_other_members_yet">There are no other members yet…</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_the_project_title">Enter the project title</string>
    <string name="project_title">Project Title</string>
    <string name="project_description">Project Description</string>
    <string name="enter_the_project_description">Enter the project description</string>
    <string name="assign_to">Assign To</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="no_contacts_found">No Contacts found</string>
    <string name="tasks">Tasks</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="there_are_no_tasks_yet">There are no tasks yet</string>


</resources>
