<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLightExtra"
    tools:context=".HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"

        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:targetApi="lollipop">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="News Feed"
                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/background_edittext_white_search"
        android:drawableLeft="@drawable/ic_action_back_dark"
        android:drawablePadding="@dimen/padding_drawable"
        android:drawableStart="@drawable/ic_action_back_dark"
        android:elevation="4dp"
        android:ems="10"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_navigation"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame">

        <TextView
            android:id="@+id/menuNewsfeed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_action_name"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center_vertical|center_horizontal"
            android:maxWidth="60dp"
            android:padding="@dimen/padding_drawable"
            android:text="@string/news_feed"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/menuWorkstation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_action_email"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center_vertical|center_horizontal"
            android:maxWidth="60dp"
            android:padding="@dimen/padding_drawable"
            android:text="@string/workstation"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/menuMembers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_action_organization"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center_vertical|center_horizontal"
            android:maxWidth="60dp"
            android:padding="@dimen/padding_drawable"
            android:text="@string/members"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/menuProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/ic_action_designation"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:gravity="center_vertical|center_horizontal"
            android:maxWidth="60dp"
            android:padding="@dimen/padding_drawable"
            android:text="@string/profile"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

    </FrameLayout>
</android.support.constraint.ConstraintLayout>