<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SignUpActivity">

    <FrameLayout
        android:id="@+id/ivProfilePictureLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ivProfilePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/person"
            app:civ_border_color="@color/colorAccentDark"
            app:civ_border_width="1dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnCancelProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="@dimen/padding_drawable"
            android:layout_marginRight="@dimen/padding_drawable"
            android:src="@drawable/ic_action_cancel"
            android:stateListAnimator="@animator/elevation_button"
            android:visibility="gone"
            app:backgroundTint="@android:color/white"
            app:fabSize="mini"
            tools:ignore="ContentDescription"
            tools:targetApi="lollipop" />

    </FrameLayout>


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_edittext_stroke"
        android:drawableLeft="@drawable/ic_action_name"
        android:drawablePadding="@dimen/padding_drawable"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/enter_name"
        android:inputType="textCapWords"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePictureLayout" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_stroke"
        android:clickable="true"
        android:focusable="true"
        android:stateListAnimator="@animator/elevation_button"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccentDark"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edittext_stroke"
        android:drawableLeft="@drawable/ic_action_email"
        android:drawablePadding="@dimen/padding_drawable"
        android:drawableStart="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etOrganizationName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edittext_stroke"
        android:drawableLeft="@drawable/ic_action_organization"
        android:drawablePadding="@dimen/padding_drawable"
        android:drawableStart="@drawable/ic_action_organization"
        android:ems="10"
        android:hint="@string/enter_your_organization_name"
        android:inputType="textCapWords"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etDesignation"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edittext_stroke"
        android:drawableLeft="@drawable/ic_action_designation"
        android:drawablePadding="@dimen/padding_drawable"
        android:drawableStart="@drawable/ic_action_designation"
        android:ems="10"
        android:hint="@string/enter_your_designation"
        android:inputType="textCapWords"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etOrganizationName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="I am :"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etDesignation" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Admin"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="CheckBox"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox"
        app:layout_constraintStart_toEndOf="@+id/checkBox" />

</android.support.constraint.ConstraintLayout>